--- a/homeloan/src/app/home/home.component.html
+++ b/homeloan/src/app/home/home.component.html
@@ -5,73 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <!--<link href="new 2.css" rel="stylesheet" type="text/css" media="screen" />-->
+    <!--<link href="loanmain.css" rel="stylesheet" type="text/css" media="screen" />-->
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 </head>
-
+    <!--Navigation Bar-->
 <body>
-    <!--Header-->
-    <!--<div class="header">
-	     <img src="./assets/pic1.png"style="padding-left: 20px;height: 50px;float:left"><h1>HOME LOAN</h1><br/>
-		 
-    </div>-->
-	
-	<!--Logo
-	-->
-	
-	<!--Row bar-->
-	
-	<div id="carrossel"> 
-		<ul> 
-			<li> 
-				<div class="carrossel-container"> 
-		           <img src="./assets/pic10.jpg" alt="img1" />
-                </div>
-            </li>
-            
-            <li> 
-				<div class="carrossel-container"> 
-		           <img src="./assets/pic2.jpg" alt="img1" />
-                </div>
-            </li>
-            
-            <li> 
-				<div class="carrossel-container"> 
-		          <img src="./assets/pic4.jpg" alt="img1" />
-                </div>
-            </li>
-			<li> 
-				<div class="carrossel-container"> 
-		          <img src="./assets/pic8.jpg" alt="img1" />
-                </div>
-            </li>
-       
-       </ul>
-    </div>
-	
-	<div class="card">
-             <p>   We provide a hassle-free user-friendly online platform to our users through
-which they can apply for loans based on their own requirements and keep a track
-of their status and record during the entire process of their loan term without
-visiting any bank branch.
+    <div class="bg-image">
+        <div style="width:100%">
+            <div class="bg-text">
+                <!--<img src="loangif.gif" alt="img1" style="float:right;height:80%;width:35%"  />-->
+                <h1>ABCD Housing Loan</h1>
+                <h5>The better we know you, the more we can do.</h5>
+                <ul class="content">
 
-                </p>
-                <p>
-                    Our system increases customer retention and simplifies loan and EMI
-management. Our project is designed to be used by any individual for home loan.
-Our customers can view available services, policies, benefits and other
-information related to a specific loan.
+                    <li>Apply for Home Loan and bring alive your<br /> dream of owning a home.</li>
+                    <li>Compare 40+ Banks & get the best housing loans<br /> at lowest interest rates.</li>
+                    <li>Get the best home loan deals with low processing <br />fee and hassle-free process.</li>
 
-                </p>
-                <p>
-                    The system collects the required information about the individual and then
-verifies if they satisfy the eligibility criteria based on which the loan gets approved
-or rejected.
-                </p>
+                </ul>
+
             </div>
-			<!--Footer-->
+
+        </div>
+        <div class="card">
+            <img src="./assets/gif1.gif" alt="img1" style="float: right; height: 80%; width: 35%" />
+        </div>
+    </div>
     <!--<div class="footer">
         <p>©️ Home Loan Limited</p>
-    </div>--> 
+    </div>-->
 </body>
 </html>
+
+
