--- a/homeloan/src/app/registration/registration.component.css
+++ b/homeloan/src/app/registration/registration.component.css
@@ -1,4 +1,4 @@
-input[type=text], input[type=password], input[type=email], input[type=tel]{
+input[type=text], input[type=password], input[type=email], input[type=number]{
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -74,7 +74,9 @@ a:hover{
 	color: Green;
 }
 button{
-    background-color: black;
+    border-radius: 20px;
+    border: 1px solid #FF4B2B;
+    background-color: #FF4B2B;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
