third push design error resolve needed

--- a/homeloan/src/app/aboutus/aboutus.component.html
+++ b/homeloan/src/app/aboutus/aboutus.component.html
@@ -1,1 +1,33 @@
-<p>aboutus works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1 class="heading">ABCD HOME LOANS</h1>
+    <h2 class="about_us">ABOUT US</h2>
+    <div class = "card">
+        <p>We  provide  a  hassle-free  user-friendly  online  platform  to  our  users  through which they can apply 
+           for loans based on their ownrequirements andkeep a track of  their  status  and  record  during  the  entire  process  
+           of  their  loan  term without visiting any bank branch. 
+        </p>
+        <ul style="list-style-type: square;">Our Values
+            <li>Trust</li>
+            <li>Transparency</li>
+            <li>Integrity</li>
+            <li>Excellence</li>
+        </ul>
+        <br/>
+        <ul style="list-style-type: square;">Values To Customer
+            <li>Wide Range of Products</li>
+            <li>Interest Calculation</li>
+            <li>Low Interest Rates</li>
+            <li>Low Processing Fees</li>
+            <li>No Hidden Costs</li>
+            <li>No Pre Payments</li>
+        </ul>
+    </div>
+</body>
+</html>
