--- a/homeloan/src/app/faq/faq.component.html
+++ b/homeloan/src/app/faq/faq.component.html
@@ -1,1 +1,92 @@
-<p>faq works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+    <title>FAQ</title>
+</head>
+
+<body>
+    <div class="faqs">
+        <details>
+            <summary> How will RedBricks decide the home loan I am eligible for? </summary>
+            <p class="p1">We will determine your Home Loan Eligibility largely by your income and repayment capacity.
+                Other important factors include your age, qualification, number of dependants, your spouse's income (if
+                any),
+                assets & liabilities, savings history and the stability & continuity of occupation.</p>
+        </details>
+        <details>
+            <summary>What does EMI mean? </summary>
+            <p class="p1">EMI refers to the ‘Equated Monthly Installment’ which is the amount you will pay to us on a
+                specific date
+                each month till the loan is repaid in full. The EMI comprises of the principal and interest components
+                which are structured in a way that in the initial years of your loan, the interest component is much
+                larger than the principal component, while towards the latter half of the loan, the principal component
+                is
+                much larger.</p>
+        </details>
+        <details>
+            <summary> How do I repay a home loan?</summary>
+            <p class="p1"> your convenience, RedBricks offers various modes for repayment of the home loan. You may
+                issue standing
+                instructions to your banker to pay the installments through ECS (Electronic Clearing System),
+                opt for direct deduction of monthly installments by your employer or issue post-dated cheques from your
+                salary account.</p>
+        </details>
+        <details>
+            <summary>When can I make a loan application?</summary>
+            <p class="p1">You can apply for a Home Loan at any time once you have decided to purchase or construct a
+                property,
+                even if you have not selected the property or the construction has not commenced.</p>
+        </details>
+        <details>
+            <summary> How do I make a loan application?</summary>
+            <p class="p1">You could collect an application form from our nearest office and submit it with the
+                supporting documents and the
+                processing fee cheque at any HDFC office that is convenient to you. Alternatively you have the option to
+                make an online application from anywhere in the world by clicking on ‘Application’ on our website and
+                also
+                know your Home Loan eligibility instantly.</p>
+        </details>
+        <details>
+            <summary> Do I get tax benefits on the loan?</summary>
+            <p class="p1">Yes. You are eligible for tax benefits on the principal and interest components of your Home
+                Loan under
+                the Income Tax Act, 1961. As the benefits could vary each year, please do check with our Loan Counselor
+                about the tax benefits which you could avail on your loan.</p>
+        </details>
+        <details>
+            <summary> Can I repay my loan ahead of schedule?</summary>
+            <p class="p1">Yes, you can repay the loan ahead of schedule by making lump sum payments towards part or full
+                prepayment,
+                subject to the applicable prepayment charges.</p>
+        </details>
+        <details>
+            <summary> Does the property have to be insured?</summary>
+            <p class="p1"> Yes, you will have to ensure that your property is duly and properly insured for fire and
+                other
+                appropriate hazards during the pendency of the loan. You will also have to produce evidence thereof to
+                RedBricks, each year and/or whenever called upon to do so. RedBricks should be the beneficiary of the
+                insurance policy.</p>
+        </details>
+        <details>
+            <summary> What is a Home Improvement Loan?</summary>
+            <p class="p1">It is a loan for renovating(without altering the structure/carpet area) your home in ways like
+                tiling ,
+                flooring, internal / external plaster and painting etc.</p>
+        </details>
+        <details>
+            <summary>When do I start repaying the Principal Amount?</summary>
+            <p class="p1">Repayment of the principal commences from the month following the month in which you avail
+                full
+                disbursement of your loan. Pending final disbursement, you pay interest on the portion of the loan
+                disbursed.
+                This interest is called pre-EMI interest. Pre-EMI interest is payable every month from the date of each
+                disbursement up to the date of commencement of EMI.</p>
+        </details>
+    </div>
+</body>
+
+</html>
