--- a/homeloan/src/app/home/home.component.html
+++ b/homeloan/src/app/home/home.component.html
@@ -8,33 +8,34 @@
     <!--<link href="loanmain.css" rel="stylesheet" type="text/css" media="screen" />-->
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 </head>
-    <!--Navigation Bar-->
+<!--Navigation Bar-->
+
 <body>
-    <div class="bg-image">
-        <div style="width:100%">
+    <!--<div class="wrapper">
+        <div style="width:100%">-->
             <div class="bg-text">
                 <!--<img src="loangif.gif" alt="img1" style="float:right;height:80%;width:35%"  />-->
-                <h1>ABCD Housing Loan</h1>
-                <h5>The better we know you, the more we can do.</h5>
-                <ul class="content">
-
-                    <li>Apply for Home Loan and bring alive your<br /> dream of owning a home.</li>
-                    <li>Compare 40+ Banks & get the best housing loans<br /> at lowest interest rates.</li>
-                    <li>Get the best home loan deals with low processing <br />fee and hassle-free process.</li>
-
-                </ul>
-
+                <h1 style="text-align:center">ABCD HOUSING LOAN</h1>
+                <h5 style="text-align:center">THE BETTER WE KNOW YOU,THE MORE WE CAN DO.</h5>
+                <div class="content">
+                    <br />Apply for Home Loan and bring <br /> alive your dream of owning a home.<br />
+                    Compare 40+ Banks & get the best housing <br />loans at lowest interest rates.<br />
+                    Get the best home loan deals with low <br />processing fee and hassle-free process.<br />
+                </div>
+                
             </div>
+            <div class="card">
+                <img src='./assets/gif1.gif' alt="img1" style="float: right; height: 75%; width: 35%" />
+            </div>
+        <!--</div>
+        
 
-        </div>
-        <div class="card">
-            <img src="./assets/gif1.gif" alt="img1" style="float: right; height: 80%; width: 35%" />
-        </div>
-    </div>
+    </div>-->
+    
+
     <!--<div class="footer">
         <p>©️ Home Loan Limited</p>
     </div>-->
 </body>
+
 </html>
-
-
