--- a/homeloan/src/app/loan-types/loan-types.component.html
+++ b/homeloan/src/app/loan-types/loan-types.component.html
@@ -1,1 +1,99 @@
-<p>loan-types works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+    <title>Types of Homeloans</title>
+</head>
+
+<body>
+    <!-- <h1>ABCD HOUSING LOANS</h1> -->
+    <h2>TYPES OF HOME LOANS GRANTED</h2>
+    <div class="card">
+        <p>A housing loan is a specified sum of money borrowed from banks and Housing Finance Companies (HFCs) to
+            purchase a house.
+            Important factors to be considered while seeking a house loan are interest rate, loan amount, loan tenure,
+            monthly
+            EMIs on house loan and credit score.
+        </p>
+        <div class="sec1">
+            <h3>Home Purchase Loans</h3>
+            <p>This type of loan is taken to buy a residential property, including flats, row houses and bungalows.
+                The maximum loan amount offered is 90% of the present market value of the property.
+            </p>
+            <h4>Eligibility Criteria</h4>
+            <table>
+                <tr>
+                    <th>Particulars</th>
+                    <th>Salaried Professionals</th>
+                    <th>Self Employed Indiviuals</th>
+                </tr>
+                <tr>
+                    <td>Age</td>
+                    <td>18 – 65 years</td>
+                    <td>18 – 65 years</td>
+                </tr>
+                <tr>
+                    <td>Employment</td>
+                    <td>Min. 2 years of experience</td>
+                    <td>Min. 5 years of experience</td>
+                </tr>
+                <tr>
+                    <td>Credit Score</td>
+                    <td>750 or above</td>
+                    <td>750 or above</td>
+                </tr>
+            </table>
+            <br />
+            <h4>Documents Required</h4>
+            <ul>
+                <li>Age Proof(Birth certificate, Class 10 marks sheet)</li>
+                <li>Address Proof (Copy of passport, Voter ID)</li>
+                <li>ncome Proof (Salary slips and ITR details)</li>
+                <li>Identification Proof (PAN card, Passport, Voter ID, etc.)</li>
+                <li>Documents of Property to be Purchased</li>
+            </ul>
+        </div>
+
+        <br>
+
+        <div class="sec2">
+            <h3>Home Improvement Loans</h3>
+            <p>This type of home loan can be availed to renovate, repair or refurnish your home.
+                Home improvement loans are very popular due to low interest rate.
+            </p>
+            <h4>Eligibility Criteria</h4>
+            <table>
+                <tr>
+                    <th>Age</th>
+                    <th>Employment</th>
+                </tr>
+                <tr>
+                    <td>18 – 65 years</td>
+                    <td>
+                        <ul style="list-style-type: disc;">
+                            <li>Salaried Individuals</li>
+                            <li>Self-Employed: Available for both Professionals and Non-Professionals</li>
+                        </ul>
+                    </td>
+                </tr>
+
+            </table>
+            <br />
+            <h4>Documents Required</h4>
+            <ul>
+                <li>Age Proof(Birth certificate, Class 10 marks sheet)</li>
+                <li>Address Proof (Copy of passport, Voter ID)</li>
+                <li>Income Proof (Salary slips and ITR details)</li>
+                <li>Estimated Renovation Quotation</li>
+                <li>Property Title Deeds (Original)</li>
+            </ul>
+        </div>
+
+        <br>
+    </div>
+</body>
+
+</html>
