--- a/homeloan/src/app/app.component.css
+++ b/homeloan/src/app/app.component.css
@@ -1,155 +1,133 @@
-body, html {
-  height: 100%;
+
+body{
+  background-image: url('C:/Users/niloy/git/Home-Loan/homeloan/src/assets/pic4.jpg');
+	background-size: cover;
+	height: 100vh;
+}
+ul {
+ margin: 0px;
+ padding: 0px;
+ list-style: none;
+ font-family:  sans-serif;
 }
 
-* {
-  box-sizing: border-box;
+ul li {
+ float: right;
+ width: 150px;
+ height: 40px;
+ background-color: black;
+ opacity: .8;
+ line-height: 40px;
+ text-align: center;
+ font-size: 20px;
 }
 
-
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-}
-.navbar-right{
-	float:right;
+ul li a {
+ text-decoration: none;
+ color: white;
+ display: block;
 }
 
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-family: Bahnschrift Condensed;
+ul li a:hover {
+ background-color: red;
 }
 
-.dropdown {
-  float: left;
-  overflow: hidden;
+ul li ul li{
+ display: none;
 }
 
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
+ul li:hover ul li {
+ display: block;
 }
-
-.navbar a:hover, .dropdown:hover .dropbtn {
- color: Green;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-
-
-.bg-image {
-  /* The image used */
-  background-image: url("/assets/pic13blur.jpg");
-
-  /* Add the blur effect */
-  /*filter: blur(8px);
-  -webkit-filter: blur(8px); */
-
-  /* Full height */
-  height: 100%;
-  width: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/* Position text in the middle of the page/image */
-
-.bg-text {
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-  color: white;
-  font-weight: bold;
-  /*border: 5px solid #f1f1f1;*/
-  position: absolute;
-  top: 55%;
-  left: 30%;
-  float:left;
-  
-  transform: translate(-50%, -50%);
- /* z-index: 2;*/
- width: 50%;
-  height:70%;
-  padding: 20px;
-  text-align: left;
-  font-size:20px;
-font-family:Bahnschrift Condensed;
-}
-
-.img{
-	max-width:80px;
+.wrapper .center{
+	position: absolute;
+	left: 50%;
 	top: 55%;
-	right: 50%;
+	transform: translate(-50%, -50%);
+	font-family: sans-serif;
+	user-select: none;
+}
+.center h1{
+	color: white;
+	font-size: 70px;
+	width: 900px;
+	font-weight: bold;
+	text-align: center;
+}
+.center h2{
+	color: white;
+	font-size: 70px;
+	font-weight: bold;
+	margin-top: 10px;
+	width: 885px;
+	text-align: center;
+}
+.center .buttons{
+	margin: 35px 280px;
+}
+.buttons button{
+	height: 50px;
+	width: 150px;
+	font-size: 18px;
+	font-weight: 600;
+	color: #ffb3b3;
+	background: red;
+	outline: none;
+	cursor: pointer;
+	border: 1px solid #cc0000;
+	border-radius: 25px;
+	transition: .4s;
+}
+.buttons .btn2{
+	margin-left: 25px;
+}
+.buttons button:hover{
+	background: #cc0000;
 }
 
-
-
-ul.content{
+/*.content {
 font-size:35px;
-font-family:Bahnschrift Condensed;
+font-family:sans-serif;
 list-style-type:disc;
 text-align:left;
 }
 
-.card{
+/*.card{
 	
 	padding: 120px;
 	/* margin-top: 10px;*/
 	/*margin-left: 500px;
 	margin-right: 60px;*/
 	
-	height:800px;
+	/*height:500px;
 	padding-bottom:90px;
 	padding-top: 110px;
 	width: 80%;
 	float: right;
 	
 }
-.footer{
-    padding: 10px;
-    text-align: center;
-    background: #ddd;
-    margin-top: 20px;
-    width: 100%;
-    margin: auto;
-}
+
+
+
+/*.bg-text {
+  background-color: rgb(0,0,0); /* Fallback color */
+  /*background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  /*color: white;
+  font-weight: bold;
+  /*border: 5px solid #f1f1f1;*/
+  /*position: absolute;
+  top: 55%;
+  left: 30%;
+  float:left;
+  
+  transform: translate(-50%, -50%);
+ /* z-index: 2;*/
+ /*width: 50%;
+  height:70%;
+  padding: 20px;
+  text-align: left;
+  font-size:20px;
+font-family:sans-serif;
+}*/
 
 
