--- a/homeloan/src/app/home/home.component.css
+++ b/homeloan/src/app/home/home.component.css
@@ -1,179 +1,130 @@
-*{
-    box-sizing: border-box;
-}
-body, html {
-    height: 100%;
-  }
-.header{
-    padding: 10px;
-    text-align:left;
-	font-size:15px;
-	font-family: Arial;
-	color:white;
-    height:300px;
-	width:100%;
-	background-image: url('C:\Users\niloy\Web Development\AngularDemo\homeloan\src\assets\pic6.jpg');
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
 
-    margin: auto; /* horizontally center  10%left+40%center40%+10%right*/
+body{
+	background-image: url('C:/Users/niloy/git/Home-Loan/homeloan/src/assets/pic12blur.jpg') no-repeat center fixed;
+	background-size: cover;
+	height: 100vh;
 }
-
-.topnav{
-	
-    padding: 3x 10px;
-    overflow: hidden; /* visible,hidden,scroll auto*/
-    background-color: black;
-    width: 100%;
-    margin: auto;
-	
-}
-
-.topnav ul{
-    list-style-type: none;
-}
-
-.topnav a{
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding:10px;
-    text-decoration: none; 
-    letter-spacing: 5px;
-    height: 70px;
-}
-
-
-
-
-#carrossel {
-  height: 300px;
-}
-#carrossel {
-  position: absolute;
-  width: 600px;
-  margin: auto;
-  overflow: hidden;
-  margin-top: 10px;
-  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5);
-}
-#carrossel li {
-  display: inline-block;
-  height: 300px;
-  float: left;
-  position: relative;
-  width: 600px;
-}
-#carrossel ul {
- position: absolute;
- right: 0;
- top: -15px; 
- width: 9000px;
+/*ul {
+ margin: 0px;
+ padding: 0px;
  list-style: none;
- margin-left: -39px;
- 
- transition: left 0.3s linear;
-}
-.carrossel-container {
- margin: 0 auto;
- padding: 0;
- width: 600px;
-}
-.carrossel-container img {
- width: 100%;
- padding: 5 5px;
-}
-#carrossel ul {
-  animation: slide 15s infinite;
+ font-family:  sans-serif;
 }
 
-@keyframes slide{
-   20% { left: 0; }
-   25% { left: -600px; }
-   45% { left: -600px; }
-   50% { left: -1200px;}
-   70% { left: -1200px; }
-   75% { left: -1800px; }
-   98% { left: -1800px; }
-   100% { left: 0; }
+ul li {
+ float: right;
+ width: 150px;
+ height: 40px;
+ background-color: black;
+ opacity: .8;
+ line-height: 40px;
+ text-align: center;
+ font-size: 20px;
 }
 
+ul li a {
+ text-decoration: none;
+ color: white;
+ display: block;
+}
+
+ul li a:hover {
+ background-color: red;
+}
+
+ul li ul li{
+ display: none;
+}
+
+ul li:hover ul li {
+ display: block;
+}
+.wrapper .center{
+	position: absolute;
+	left: 50%;
+	top: 55%;
+	transform: translate(-50%, -50%);
+	font-family: sans-serif;
+	user-select: none;
+}
+.center h1{
+	color: white;
+	font-size: 70px;
+	width: 900px;
+	font-weight: bold;
+	text-align: center;
+}
+.center h2{
+	color: white;
+	font-size: 70px;
+	font-weight: bold;
+	margin-top: 10px;
+	width: 885px;
+	text-align: center;
+}
+.center .buttons{
+	margin: 35px 280px;
+}
+.buttons button{
+	height: 50px;
+	width: 150px;
+	font-size: 18px;
+	font-weight: 600;
+	color: #ffb3b3;
+	background: red;
+	outline: none;
+	cursor: pointer;
+	border: 1px solid #cc0000;
+	border-radius: 25px;
+	transition: .4s;
+}
+.buttons .btn2{
+	margin-left: 25px;
+}
+.buttons button:hover{
+	background: #cc0000;
+}*/
+
+.content {
+font-size:35px;
+font-family:sans-serif;
+list-style-type:disc;
+text-align:left;
+}
 
 .card{
-    padding: 120px;
+  padding: 120px;
 	/* margin-top: 10px;*/
 	/*margin-left: 500px;
 	margin-right: 60px;*/
 	
-	height:800px;
+	height:500px;
 	padding-bottom:90px;
 	padding-top: 110px;
 	width: 80%;
 	float: right;
-}
-
-
-.footer{
-    padding: 10px;
-    text-align: center;
-    background: #ddd;
-    margin-top: 20px;
-    width: 100%;
-    margin: auto;
-}
-
-a:hover{
-	color: Green;
-}
-.bg-image {
-    /* The image used */
-    background-image: url("C:\Users\niloy\git\Home-Loan\homeloan\src\assets\Home Buyer Rights.jpg");
-  
-    /* Add the blur effect */
-    /*filter: blur(8px);
-    -webkit-filter: blur(8px); */
-  
-    /* Full height */
-    height: 100%;
-    /*width: 100%;*/
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  /* Position text in the middle of the page/image */
-  
-  .bg-text {
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-    color: white;
-    font-weight: bold;
-    /*border: 5px solid #f1f1f1;*/
-    position: absolute;
-    top: 55%;
-    left: 30%;
-    float:left;
-    
-    transform: translate(-50%, -50%);
-   /* z-index: 2;*/
-   width: 50%;
-    height:70%;
-    padding: 20px;
-    text-align: left;
-    font-size:20px;
-  font-family:Bahnschrift Condensed;
-  }
-  .img{
-	max-width:80px;
-	top: 55%;
-	right: 50%;
+	
 }
 
 
 
-ul.content{
-font-size:35px;
-font-family:Bahnschrift Condensed;
-list-style-type:disc;
-text-align:left;
+.bg-text {
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  /*border: 5px solid #f1f1f1;*/
+  position: absolute;
+  top: 55%;
+  left: 30%;
+  float:left;
+  
+  transform: translate(-50%, -50%);
+ /* z-index: 2;*/
+ width: 50%;
+  height:70%;
+  padding: 20px;
+  text-align: left;
+  font-size:20px;
+font-family:sans-serif;
 }
