--- a/homeloan/src/app/login/login.component.css
+++ b/homeloan/src/app/login/login.component.css
@@ -4,14 +4,14 @@
 }
 
 body {
-	background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/assets/pic4.jpg");
-	display: flex;
+	background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/assets/pic4.jpg") no-repeat center fixed;
+	/*display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat', sans-serif;*/
 	height: 100vh;
-	margin: -20px 0 50px;
+	/*margin: -20px 0 50px;*/
 }
 
 h1 {
