--- a/homeloan/src/app/registration/registration.component.css
+++ b/homeloan/src/app/registration/registration.component.css
@@ -18,7 +18,11 @@ input[type=text], input[type=password], input[type=email], input[type=number]{
     margin-top: 20px;
     overflow: hidden;
 }
-.header{
+.main{
+    width: 80%;
+    margin: auto;
+}
+/*.header{
     padding: 10px;
     text-align:left;
 	font-size:15px;
@@ -31,20 +35,21 @@ input[type=text], input[type=password], input[type=email], input[type=number]{
     background-size: 100% 100%;
 
     margin: auto; /* horizontally center  10%left+40%center40%+10%right*/
-}
+
+
 *{
     box-sizing: border-box;
 }
 body{
-    font-family: Arial;
-    padding: 10px;
-    background: #f1f1f1;
+    background-image: url('C:/Users/niloy/git/Home-Loan/homeloan/src/assets/pic12blur.jpg') no-repeat center fixed;
+	background-size: cover;
+	height: 100vh;
 }
-.topnav{
+/*.topnav{
 	
     padding: 3x 10px;
     overflow: hidden; /* visible,hidden,scroll auto*/
-    background-color: black;
+    /*background-color: black;
     width: 100%;
     margin: auto;
 	
@@ -72,7 +77,7 @@ body{
 }
 a:hover{
 	color: Green;
-}
+}*/
 button{
     border-radius: 20px;
     border: 1px solid #FF4B2B;
