--- a/homeloan/src/app/faq/faq.component.html
+++ b/homeloan/src/app/faq/faq.component.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h2 class="heading">Frequently Asked Questions</h2>
     <div class="faqs">
         <details>
             <summary> How will RedBricks decide the home loan I am eligible for? </summary>
