--- a/homeloan/src/app/emicalculator/emicalculator.component.css
+++ b/homeloan/src/app/emicalculator/emicalculator.component.css
@@ -1,27 +1,27 @@
 .left-title{
-    font-size: 15px;
+    font-size: 25px;
     font-weight: 500;
-    color: gray;
+    color:white;
 }
 .result{
     font-size: 16px;
     font-weight: 600;
 }
 h5,h6{
-    color: gray;
+    color:white;
 }
 .active{
-    background-color: lightgray;
+    background-color: white;
 }
 
 h1{
-    font-size: 35px;
-    color: gray;
+    font-size: 50px;
+    color:white;
 }
 @media only screen and (max-width: 500px) {
     h1{
-        font-size: 15px;
-        color: gray;
+        font-size: 20px;
+        color:white;
     }
    
 }
@@ -30,4 +30,27 @@ h1{
         font-size: 35px;
         margin: auto;   
     }
+}
+.well{
+    box-sizing: border-box;
+    margin-left: 40px;
+    margin-top: 40px;
+    margin-right: 60px;
+    margin-bottom: 90px;
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6));
+    color: white;
+    transform: translate(0%,40%);
+}
+body{
+	background-image: url('C:/Users/niloy/git/Home-Loan/homeloan/src/assets/pic12blur.jpg') no-repeat center fixed;
+	background-size: cover;
+    height: 100vh;
+    margin-top: -50px;
+    /* margin-bottom: 50px; */
+}
+.form-group{
+    margin-top: 10px;
+    margin-bottom: 40px;
+    margin-right: 60px;
+    margin-left: 40px;
 }
