--- a/homeloan/src/app/features/features.component.html
+++ b/homeloan/src/app/features/features.component.html
@@ -55,7 +55,7 @@
                 <a [routerLink]="['/applicationLink']">APPLY NOW</a>
             </div>
             <div class="content-right">
-                <img src="img3.jpg">
+                <img src="/assets/img3.jpg">
             </div>
         </div>
         <div id="content3" class="content">
@@ -82,7 +82,7 @@
 
     </div>
 
-    <script src="main.js"></script>
+    <script src="/assets/main.js"></script>
 </body>
 
 </html>
