--- a/homeloan/src/app/loan-types/loan-types.component.css
+++ b/homeloan/src/app/loan-types/loan-types.component.css
@@ -9,13 +9,13 @@
 }
 body{
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/assets/pic4.jpg") no-repeat center fixed;
-	display: flex;
+	/*display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
+	flex-direction: column;*/
 	font-family: 'Montserrat', sans-serif;
 	height: 100vh;
-	margin: -20px 0 50px;
+	margin: -55px 0 50px;
 }
 .sec1,
 .sec2 {
