--- a/homeloan/src/app/login/login.component.css
+++ b/homeloan/src/app/login/login.component.css
@@ -72,13 +72,14 @@ input {
 
 .container {
 	background-color: #fff;
-	border-radius: 10px;
+	border-radius: 5px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
 	width: 768px;
 	max-width: 100%;
 	min-height: 480px;
+	transform: translate(50%,25%);
 }
 
 .form-container {
